Do not use wheel on python 2.7 virtualenv.

--- a/INSTALL
+++ b/INSTALL
@@ -52,6 +52,11 @@ Pip will also install ``pdb-clone``.
 Pip will also install ``trollius`` and its dependencies on Python 2.7 or on
 Python versions older than 3.4.
 
+On a virtual environment set up by virtualenv with Python 2.7, install pyclewn
+with the following command to prevent pip from using wheel::
+
+    pip install --no-binary pyclewn pyclewn
+
 Use a local installation when you do not have root privileges and those are
 required to install Python packages::
 
