--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ News
 Pyclewn 2.2
 -----------
 
-.. May 8, 2015
+.. November 27, 2015
 
 Bug fixes
 ^^^^^^^^^
@@ -20,6 +20,9 @@ Bug fixes
 
 * Issue #31: Hitting <CR> in the breakpoints window now splits the first
   window of the current tab loaded with a non-clewn buffer.
+
+* Issue #31: Do not use wheel to install pyclewn on the Python 2.7 run by
+  virtualenv.
 
 Pyclewn 2.1
 -----------
