--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,12 @@ News
 Pyclewn 2.4
 -----------
 
-.. May 12, 2016
+.. October 24, 2016
+
+* Issue #57: Fix the ``--background`` command line option.
+
+Bug fixes
+^^^^^^^^^
 
 Pyclewn 2.3
 -----------
